# home-automation

./: .gitignore  Cargo.toml  renovate.json5
.github/workflows/: build.yml
client/lib/: Cargo.toml
client/lib/src/: lib.rs
client/lib/src/logging/: mod.rs
client/lib/src/websocket/: handler.rs  mod.rs
client/streamdeck/: Cargo.toml
client/streamdeck/src/: config.rs  handler.rs  main.rs
client/streamdeck/src/device/: handler.rs  mod.rs
common/: Cargo.toml
common/src/: lib.rs  types.rs
common/src/action/: mod.rs
common/src/automacro/: mod.rs
common/src/automodule/: mod.rs
common/src/automodule/streamdeck/: mod.rs
common/src/config/: mod.rs
common/src/fs/: mod.rs  util.rs
common/src/test/: mod.rs
common/src/websocket/: convert.rs  dto.rs  handler.rs  mod.rs
package/: package.ps1  package.sh
server/: Cargo.toml
server/src/: logger.rs  main.rs  services.rs
server/src/automodule/: mod.rs
server/src/automodule/philipshue/: api.rs  config.rs  dto.rs  mod.rs  routes.rs
server/src/automodule/spotify/: config.rs  mod.rs
server/src/automodule/spotify/api/: mod.rs  requester.rs
server/src/automodule/spotify/routes/: auth.rs  mod.rs
server/src/automodule/streamdeck/: mod.rs
server/src/websocket/: convert.rs  dto.rs  handler.rs  mod.rs  route.rs  server.rs
server/ui/: package-lock.json  package.json  vite.config.ts
server/ui/src/: App.module.css  App.tsx  index.css
server/ui/src/api/: api.ts  philipshue.ts  spotify.ts
server/ui/src/components/card/: Card.module.css  Card.tsx
server/ui/src/components/hue/: color.ts
server/ui/src/components/hue/hue-button/: HueButton.tsx
server/ui/src/components/hue/hue-button-row/: HueButtonRow.module.css  HueButtonRow.tsx
server/ui/src/components/hue/hue-card/: HueCard.module.css  HueCard.tsx
server/ui/src/components/icon-button/: IconButton.module.css  IconButton.tsx
server/ui/src/components/spotify/spotify-card/: SpotifyCard.module.css  SpotifyCard.tsx
