[package]
name = "home-automation-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
axum = { version = "0.5.17", features = ["json", "http1", "http2", "ws"]}
axum-server = { version = "0.4.3" }
axum-macros = "0.2.3"
chrono = "0.4.22"
log = "0.4.17"
futures = "0.3.25"
hyper = { version = "0.14.22", features = ["client"] }
serde = "1.0.147"
serde_derive = "1.0.147"
serde_json = "1.0.87"
tokio = { version = "1.21.2", features = ["macros", "sync", "time", "rt-multi-thread"] }
tokio-stream = "0.1.11"
tower-http = { version = "0.3.4", features = ["fs", "trace"]}
home-automation-common = { path = "../common" }

[dependencies.log4rs]
version = "1.2.0"
default-features = false
features = ["console_appender", "rolling_file_appender", "fixed_window_roller", "size_trigger", "compound_policy", "json_encoder"]

[dev-dependencies]
tokio-tungstenite = "0.17.2"