[package]
name = "home-automation-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
axum = { version = "0.6.1", features = ["json", "http1", "http2", "ws"]}
axum-server = { version = "0.4.4" }
axum-macros = "0.3.0"
chrono = "0.4.23"
log = "0.4.17"
futures = "0.3.25"
hyper = { version = "0.14.23", features = ["client"] }
hyper-tls = "0.5.0"
serde = "1.0.150"
serde_derive = "1.0.150"
serde_json = "1.0.89"
tokio = { version = "1.23.0", features = ["macros", "sync", "time", "rt-multi-thread"] }
tokio-stream = "0.1.11"
tower-http = { version = "0.3.5", features = ["fs", "trace"]}
ts-rs = { version = "6.2.1", features = ["serde-compat"] }
home-automation-common = { path = "../common" }

[dependencies.log4rs]
version = "1.2.0"
default-features = false
features = ["console_appender", "rolling_file_appender", "fixed_window_roller", "size_trigger", "compound_policy", "json_encoder"]

[dev-dependencies]
tokio-tungstenite = "0.18.0"
