[package]
name = "home-automation-client-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
futures-util = "0.3"
log = "0.4"
tokio = { version = "1.23", features = ["rt", "macros", "sync", "time"] }
tokio-tungstenite = { version = "0.18", features = ["connect", "stream"] }
home-automation-common = { path = "../../common" }

[dependencies.log4rs]
version = "1.2"
default-features = false
features = ["console_appender", "rolling_file_appender", "fixed_window_roller", "size_trigger", "compound_policy"]
