[package]
name = "home-automation-streamdeck-client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
hidapi = "1.5"
log = "0.4.17"
tokio = { version = "1.23.1", features = ["rt", "macros", "sync", "time"] }
tokio-tungstenite = { version = "0.18.0", features = ["connect", "stream"] }
rusttype = "0.9"
serde = "1.0.150"
serde_derive = "1.0.150"
serde_json = "1.0.89"
streamdeck = "0.7.0"

home-automation-client-lib = { path = "../lib" }
home-automation-common = { path = "../../common" }

[dependencies.log4rs]
version = "1.2.0"
default-features = false
features = ["console_appender", "rolling_file_appender", "fixed_window_roller", "size_trigger", "compound_policy"]
